Works with remote now; lattice wip