@@ -1,6 +1,7 @@
 package dev.lazurite.quadz.client.resource;
 
 import dev.lazurite.quadz.Quadz;
+import dev.lazurite.quadz.client.mixin.resource.SplashManagerAccess;
 import net.fabricmc.fabric.api.resource.SimpleSynchronousResourceReloadListener;
 import net.minecraft.client.Minecraft;
 import net.minecraft.resources.ResourceLocation;
@@ -10,7 +11,6 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.stream.Collectors;
 
 /**
  * This is simply for loading custom splash-screen messages into the existing list.
@@ -28,8 +28,8 @@ public class SplashResourceLoader implements SimpleSynchronousResourceReloadList
         manager.getResource(location).ifPresent(resource -> {
             try {
                 final var bufferedReader = new BufferedReader(new InputStreamReader(resource.open(), StandardCharsets.UTF_8));
-                final var strings = bufferedReader.lines().map(String::trim).filter((string) -> string.hashCode() != 125780783).collect(Collectors.toList());
-                Minecraft.getInstance().getSplashManager().splashes.addAll(strings);
+                final var strings = bufferedReader.lines().map(String::trim).filter((string) -> string.hashCode() != 125780783).toList();
+                ((SplashManagerAccess) Minecraft.getInstance().getSplashManager()).getSplashes().addAll(strings);
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
